--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@
   margin-left: -220px;
   overflow-y: auto;
   overflow-x: hidden;
-  background: #337ab7;
+  background: #5F5F5F;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
